k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: codeguardian
  labels:
    app.kubernetes.io/name: codeguardian
